add-beer state added and working

--- a/app/src/components/all-beers/all-beers.html
+++ b/app/src/components/all-beers/all-beers.html
@@ -11,8 +11,8 @@
         </thead>
         <tbody>
             <tr ng-repeat="beer in $ctrl.beers"
-                ui-sref="store({
-                    id: store._id
+                ui-sref="beer({
+                    id: beer._id
                 })">
                 <td>{{beer.name}}</td>
                 <td>{{beer.brewer}}</td>
