restructure routes to replace welcome with about, about.app, and about.developer

--- a/app/src/components/about-app/about-app.html
+++ b/app/src/components/about-app/about-app.html
@@ -1,6 +1,6 @@
-<section ng-class="$ctrl.styles.welcome">
+<section ng-class="$ctrl.styles.app">
     <header>
-        <h1>Welcome to the Beer Reviewed Journal!</h1>
+        <h1>The Beer Reviewed Journal</h1>
     </header> 
     <div>
         <p>Click on the Get Strarted button below to see some beers.</p>   
