--- a/app/src/components/all-beers/all-beers.html
+++ b/app/src/components/all-beers/all-beers.html
@@ -22,6 +22,6 @@
         </tbody>
     </table>
     <nav>
-        <button ng-click="$ctrl.goToAdd()">Add a Store</button>
+        <button ng-click="$ctrl.goToAdd()">Add a Beer</button>
     </nav>
 </section>
