review-service set up and working

--- a/app/src/components/beer-reviews/beer-reviews.html
+++ b/app/src/components/beer-reviews/beer-reviews.html
@@ -1,6 +1,6 @@
 <section ng-class="$ctrl.styles.reviews">
     <div>
-        <h2>This beer has the following reviews.</h2>
+        <h2>{{$ctrl.beer.name}} has the following reviews.</h2>
         <table>
             <thead>
                 <tr>
