--- a/app/src/components/profile/profile.html
+++ b/app/src/components/profile/profile.html
@@ -1,4 +1,4 @@
-<section ng-class="$ctrl.styles.about">
+<section ng-class="$ctrl.styles.profile">
     <header>
         <div>
             <h1>The Beer Reviewed Journal</h1>
