header with nav setup/img files are incorporated in build

--- a/app/src/components/about-developer/about-developer.html
+++ b/app/src/components/about-developer/about-developer.html
@@ -1,5 +1,5 @@
 <section ng-class="$ctrl.styles.developer">
-    <img src="/img/nathan-profile.JPG" alt="Nathan Profile Picture">
+    <img src="/img/nathan-hugon.JPG" alt="Nathan Profile Picture">
     <h3>Nathan Hugon</h3>
     <p>I am a full-stack JavaScript developer with a
     background in education as an English teacher and a love for sourdough
