--- a/app/src/components/beer/beer.html
+++ b/app/src/components/beer/beer.html
@@ -1,6 +1,14 @@
 <section ng-class="$ctrl.styles.beer">
     <header>
-            <button ng-if="$ctrl.isAuthenticated()" ui-sref="welcome" ng-click="$ctrl.logout()">logout</button>
+        <div>
+            <h1 ui-sref="about">The Beer Reviewed Journal</h1>
+        </div>
+        <nav>
+            <li ng-if="$ctrl.isAuthenticated()" ui-sref="profile">MY REVIEWS</li>
+            <li ng-if="$ctrl.isAuthenticated()" ui-sref="beers">BEERS</li>
+            <li ng-if="$ctrl.isAuthenticated()" ui-sref="about" ng-click="$ctrl.logout()">LOGOUT</li>
+            <li ng-if="!$ctrl.isAuthenticated()" ui-sref="beers">SIGNIN</li>     
+        </nav>
     </header>
     <section>
         <ui-view></ui-view>
