--- a/app/src/components/beers/beers.html
+++ b/app/src/components/beers/beers.html
@@ -1,6 +1,14 @@
 <section ng-class="$ctrl.styles.beers">
     <header>
-        <h1>This is Header Content.</h1>
+        <div>
+            <h1 ui-sref="about">The Beer Reviewed Journal</h1>
+        </div>
+        <nav>
+            <li ng-if="$ctrl.isAuthenticated()" ui-sref="profile">MY REVIEWS</li>
+            <li ng-if="$ctrl.isAuthenticated()" ui-sref="beers">BEERS</li>
+            <li ng-if="$ctrl.isAuthenticated()" ui-sref="about" ng-click="$ctrl.logout()">LOGOUT</li>
+            <li ng-if="!$ctrl.isAuthenticated()" ui-sref="beers">SIGNIN</li>     
+        </nav>
     </header>
     <p>Random content on beers parent.<p>
     <section>
