--- a/app/src/components/profile/profile.html
+++ b/app/src/components/profile/profile.html
@@ -1,13 +1,13 @@
 <section ng-class="$ctrl.styles.profile">
     <header>
         <div>
-            <h1>The Beer Reviewed Journal</h1>
+            <h1 ui-sref="about">The Beer Reviewed Journal</h1>
         </div>
         <nav>
+            <li ng-if="$ctrl.isAuthenticated()" ui-sref="profile">MY REVIEWS</li>
+            <li ng-if="$ctrl.isAuthenticated()" ui-sref="beers">BEERS</li>
             <li ng-if="$ctrl.isAuthenticated()" ui-sref="about" ng-click="$ctrl.logout()">LOGOUT</li>
-            <li ng-if="!$ctrl.isAuthenticated()" ui-sref="beers">SIGNIN</li>
-            <li ng-if="$ctrl.isAuthenticated()" ui-sref="profile">PROFILE</li>
-            <li ui-sref="about">HOME</li>
+            <li ng-if="!$ctrl.isAuthenticated()" ui-sref="beers">SIGNIN</li>     
         </nav>
     </header>
 
