--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -1,6 +1,9 @@
+@import 'colors';
+
 body {
-    font-family: Helvetica, Arial, sans-serif;
-    background-color: #70c1b3;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+    background-color: $background;
     color: black;
     margin: 0;
     padding: 0;
