add reviewer to res for reviewers

--- a/app/src/components/beer-reviews/beer-reviews.html
+++ b/app/src/components/beer-reviews/beer-reviews.html
@@ -6,12 +6,14 @@
                 <tr>
                     <td>Stars</td>
                     <td>Comments</td>
+                    <td>Reviewer</td>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="review in $ctrl.beer.reviews">
                     <td>{{review.stars}}</td>
                     <td>{{review.comments}}</td>
+                    <td>{{review.reviewer}}</td>
                 </tr>
             </tbody>
         </table>
