--- a/app/src/components/about/about.html
+++ b/app/src/components/about/about.html
@@ -1,7 +1,7 @@
 <section ng-class="$ctrl.styles.about">
     <header>
         <div>
-            <h1>The Beer Reviewed Journal</h1>
+            <h1 ui-sref="about">The Beer Reviewed Journal</h1>
         </div>
         <nav>
             <li ng-if="$ctrl.isAuthenticated()" ui-sref="profile">MY REVIEWS</li>
