changed schema for review

--- a/app/src/components/add-beers/add-beers.html
+++ b/app/src/components/add-beers/add-beers.html
@@ -11,8 +11,8 @@
             <input ng-model="$ctrl.style">
         </div>
         <div>
-            <label>Brewer</label>
-            <input ng-model="$ctrl.brewer">
+            <label>Brewery</label>
+            <input ng-model="$ctrl.brewery">
         </div>
         <div>
             <label>ABV</label>
