--- a/app/src/components/all-beers/all-beers.html
+++ b/app/src/components/all-beers/all-beers.html
@@ -4,7 +4,7 @@
         <thead>
             <tr>
                 <td>Beer</td>
-                <td>Brewer</td>
+                <td>Brewery</td>
                 <td>Style</td>
                 <td>ABV</td>
             </tr>
@@ -15,7 +15,7 @@
                     id: beer._id
                 })">
                 <td>{{beer.name}}</td>
-                <td>{{beer.brewer}}</td>
+                <td>{{beer.brewery}}</td>
                 <td>{{beer.style}}</td>
                 <td>{{beer.abv}}</td>
             </tr>
