--- a/app/src/components/beer-reviews/beer-reviews.html
+++ b/app/src/components/beer-reviews/beer-reviews.html
@@ -4,14 +4,14 @@
         <table>
             <thead>
                 <tr>
-                    <td>Stars</td>
+                    <td>Drink Again?</td>
                     <td>Comments</td>
                     <td>Reviewer</td>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="review in $ctrl.beer.reviews">
-                    <td>{{review.stars}}</td>
+                    <td>{{review.drinkAgain}}</td>
                     <td>{{review.comments}}</td>
                     <td>{{review.reviewer}}</td>
                 </tr>
