--- a/app/src/components/account/signup/signup.html
+++ b/app/src/components/account/signup/signup.html
@@ -1,24 +1,16 @@
 <section>
-	<h2>Sign up for the awesome todo app</h2>
+	<h2>Sign up for The Beer Reviewed Journal</h2>
 	<form name="auth" ng-submit="$ctrl.authenticate()">
-		<div>
-			<label>
-				email: <input required ng-model="$ctrl.credentials.email">
-			</label>
-		</div>
-
 		<div>
 			<label>
 				username: <input required ng-model="$ctrl.credentials.username">
 			</label>
 		</div>
-
 		<div>
 			<label>
 				password: <input required type="password" ng-model="$ctrl.credentials.password">
 			</label>
 		</div>
-
 		<button type="submit">Sign Up</button>
 	</form>
 	<div class="error" ng-if='$ctrl.error'>{{$ctrl.error.reason}}</div>
