--- a/app/src/components/profile/profile.html
+++ b/app/src/components/profile/profile.html
@@ -6,6 +6,7 @@
         <nav>
             <li ng-if="$ctrl.isAuthenticated()" ui-sref="profile">MY REVIEWS</li>
             <li ng-if="$ctrl.isAuthenticated()" ui-sref="beers">BEERS</li>
+            <li ng-if="$ctrl.isAdmin()" ui-sref="beers">ADD BEERS</li>
             <li ng-if="$ctrl.isAuthenticated()" ui-sref="about" ng-click="$ctrl.logout()">LOGOUT</li>
             <li ng-if="!$ctrl.isAuthenticated()" ui-sref="beers">SIGNIN</li>     
         </nav>
