save old change; evrything seems to be working

--- a/app/src/components/admin/admin.html
+++ b/app/src/components/admin/admin.html
@@ -1,4 +1,4 @@
-<section ng-class="$ctrl.styles.beers">
+<section ng-class="$ctrl.styles.admin">
     <header>
         <div>
             <h1 ui-sref="about">The Beer Reviewed Journal</h1>
@@ -12,7 +12,7 @@
             <li ng-if="!$ctrl.isAuthenticated()" ui-sref="beers">SIGNIN</li>     
         </nav>
     </header>
-    <p>Random content on beers parent.<p>
+    <p>Random content on admin parent.<p>
     <section>
         <ui-view></ui-view>
     </section>
