styling the landing page

--- a/app/src/components/about-app/about-app.html
+++ b/app/src/components/about-app/about-app.html
@@ -1,7 +1,13 @@
 <section ng-class="$ctrl.styles.app">
     <div>
-        <p>Click on the Get Strarted button below to see some beers.</p>   
-        <button ui-sref="beers
-        ">Get Started!</button>
+        <div id="hero">
+            <div id="hero-text">
+                Click on the Get Started button below to see some beers. df fsd sdf sdf sdf sdf fsd sdf fds lkj lkj dsjkl sadjksla lakjs djskadjskallksk  jk jk
+                 j kjs k jsdkjsald j jis jioksk  dsi w jsaok  dsjko sd jsaj  oj  j ojdsoj 
+                  jsakdjosj djio 
+            </div>
+            <img src="/img/beer-mug.jpg" alt="Nathan Profile Picture">
+        </div>   
+        <button ui-sref="beers">Get Started!</button>
     </div>
 </section>
