--- a/app/src/components/about/about.scss
+++ b/app/src/components/about/about.scss
@@ -35,6 +35,19 @@
             }
         }
     }
+
+    footer {
+        padding: 1% 0;
+        text-align: center;
+        color: $footer-text;
+        background: $footer;
+        // border-top: 1px solid $green;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        z-index: 1000;
+    }
 }
 
 
