--- a/app/src/scss/partials/_colors.scss
+++ b/app/src/scss/partials/_colors.scss
@@ -4,15 +4,33 @@
 // #2b9eb3 light sea green    #78c1ce dark sky blue
 // #dbd5b5 timberwolf
 
+// #008e97 aqua
+// #f58220 orange
+// #f79b4d light orange
+// #005778 blue
+// #2028f5 dark blue
+// #f52028 red
+// #fa8f93 light red
+// #f5ec20 yellow
+// #fcf9b6 faded yellow
+// #20f582 green
+// #8220f5 purple
+// #78c1ce sky blue
 
-$logo: #8c2833;
-$item: #247ba0;
-$nav: #247ba0;
-$text: #247ba0;
-$content: #f8333c;
-$background: #dbd5b5;
+
+$logo: #20f582;
+$item: #005778;
+$nav: #008e97;
+$text: #f58220;
+$content: #f52028;
+$background: #f79b4d;
 $header: #78c1ce;
-$button: #f4d06f;
+$footer: #005778;
+$footer-text: #fcf9b6;
+$button: #fcf9b6;
+$green: #20f582;
+$red: #f52028;
+$light-red: #fa8f93;
 $black: #090909;
 $white: #fafafa;
 $grey: #d3d3d3;
