add scss @mixins for header and footer; set html font-size to px and use rems to set font-size elsewhere; add footer to all pages

--- a/app/src/components/beers/beers.html
+++ b/app/src/components/beers/beers.html
@@ -16,4 +16,7 @@
     <section>
         <ui-view></ui-view>
     </section>
+    <footer ui-sref="about.developer">
+        &copy; 2017 Nathan Hugon
+    </footer>
 </section>
