--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -1,5 +1,9 @@
 @import 'colors';
 
+html {
+    font-size: 10px;
+}
+
 body {
     box-sizing: border-box;
     font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
