--- a/app/src/components/about-developer/about-developer.html
+++ b/app/src/components/about-developer/about-developer.html
@@ -1,12 +1,7 @@
 <section ng-class="$ctrl.styles.developer">
     <img src="/img/nathan-hugon.JPG" alt="Nathan Profile Picture">
     <h3>Nathan Hugon</h3>
-    <p>I am a full-stack JavaScript developer with a
-    background in education as an English teacher and a love for sourdough
-    baking. Initially drawn to web development as a means to share my baking
-    knowledge, I strive to write code that is modular, flexible, and easy
-    to read. An accompanying passion for research drives my ability to find
-    and create solutions to complex problems.</p>
+    <p>I am a full-stack developer with a love for food, drink, music, and skateboarding.</p>
     <ul>
         <li><a href="https://github.com/nthugon" target="_blank">Github</a></li>
         <li><a href="https://www.linkedin.com/in/nathanhugon" target="_blank">LinkedIn</a></li>
