--- a/app/src/components/admin/admin.html
+++ b/app/src/components/admin/admin.html
@@ -19,4 +19,7 @@
     <section>
         <ui-view></ui-view>
     </section>
+    <footer ui-sref="about.developer">
+        &copy; 2017 Nathan Hugon
+    </footer>
 </section>
