--- a/app/src/components/beer/beer.html
+++ b/app/src/components/beer/beer.html
@@ -15,4 +15,7 @@
     <section>
         <ui-view></ui-view>
     </section>
+    <footer ui-sref="about.developer">
+        &copy; 2017 Nathan Hugon
+    </footer>
 </section>
