--- a/app/src/components/beer/beer.scss
+++ b/app/src/components/beer/beer.scss
@@ -1,39 +1,16 @@
 @import 'colors';
+@import 'header';
+@import 'footer';
 
 :local(.beer) {
     margin:  10% 2% 2%;
     border: 1px solid black;
 
     header {
-        background-color: $header;
-        position: fixed;
-        width: 100%;
-        top: 0;
-        left: 0;
-        z-index: 1000;
+        @include header();
+    }
 
-        div {
-            width: 50%;
-            float: left;
-            padding: 2% 0;
-            h1 {
-                padding-left: 4%;
-                margin: 0;
-                font-size: 1.5em;
-            }           
-        }
-        nav {
-            text-align: right;
-            width: 50%;
-            float: right;
-            list-style: none;
-            line-height: 1.75em;
-            font-size: 1em;
-            padding: 2% 0;
-            li {
-                margin-right: 4%;
-                display: inline-block;
-            }
-        }
+    footer {
+        @include footer(); 
     }
 }
