basic page layout and color scheme

--- a/app/src/components/beers/beers.html
+++ b/app/src/components/beers/beers.html
@@ -12,7 +12,7 @@
             <li ng-if="!$ctrl.isAuthenticated()" ui-sref="beers">SIGNIN</li>     
         </nav>
     </header>
-    <p>Random content on beers parent.<p>
+    <h2>Beers!</h2>
     <section>
         <ui-view></ui-view>
     </section>
