--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -7,7 +7,7 @@ html {
 body {
     box-sizing: border-box;
     font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
-    background-color: $background;
+    background-color: $app-background;
     color: black;
     margin: 0;
     padding: 0;
