--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -1,7 +1,18 @@
 @import 'colors';
 
 :local(.allbeers) {
-    margin: 2%;
-    border: 1px solid black;
+    box-sizing: border-box;
+    width: 60%;
+    margin: 0 auto 5%;
+    background-color: $content;
+    border: 1px solid $content;
+    border-radius: 1.6rem;
+    min-height: 260px;
     color: $white;
+    font-size: 1.6rem;
+    h3 {
+        font-size: 1.6rem;
+        text-align: center;
+        color: $black;
+    }
 }
