--- a/app/src/components/beers/beers.scss
+++ b/app/src/components/beers/beers.scss
@@ -4,12 +4,7 @@
 
 :local(.beers) {
     box-sizing: border-box;
-    background-color: $parent-background;
-    border: 1px solid $parent-background;
-    border-radius: 1.6rem;
-    width: 80%;
-    min-height: 400px;
-    margin:  120px auto;
+    margin:  120px 0 0;
     
     h2 {
         text-align: center;
