--- a/app/src/scss/partials/_colors.scss
+++ b/app/src/scss/partials/_colors.scss
@@ -19,9 +19,9 @@
 // #78c1ce sky blue
 
 $header: #78c1ce;
-$app-background: #f79b4d;
+$app-background: #fafafa;
 $parent-background: #0fa8ad;
-$content: #f58220;
+$accent: #f58220;
 $button: #fcf9b6;
 $footer: #005778;
 $footer-text: #fcf9b6;
