--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -15,34 +15,32 @@
         width: 90%;
         margin: 0 auto;
         border-radius: 15px;
-        border: 1px solid #bdbdbd;
+        border-collapse: collapse;
         background-color: $grey;
-    }
-    td, th {
-        border-left: 1px solid #bdbdbd;
-        border-top:1px solid #bdbdbd;
-    }
-    td {
-        text-align: center;
-    }
-    th:nth-child(1) {
-        width: 35%;
-    }
-    th:nth-child(2) {
-        width: 30%;
-    }
-    th:nth-child(3) {
-        width: 25%;
-    }
-    th:nth-child(4) {
-        width: 10%;
-    }
-
-    th {
-            border-top: none;
-    }
-
-    td:first-child, th:first-child {
-            border-left: none;
+        td, th {
+            border-left: 1px solid $accent;
+            border-top:1px solid $accent;
+        }
+        td {
+            text-align: center;
+        }
+        th:nth-child(1) {
+            width: 35%;
+        }
+        th:nth-child(2) {
+            width: 30%;
+        }
+        th:nth-child(3) {
+            width: 25%;
+        }
+        th:nth-child(4) {
+            width: 10%;
+        }    
+        th {
+                border-top: none;
+        }    
+        td:first-child, th:first-child {
+                border-left: none;
+        }
     }
 }
