--- a/app/src/scss/partials/_colors.scss
+++ b/app/src/scss/partials/_colors.scss
@@ -8,6 +8,7 @@
 // #0fa8ad faded aqua
 // #f58220 orange
 // #f79b4d light orange
+// #f8c9a3 faded light orange
 // #005778 blue
 // #2028f5 dark blue
 // #f52028 red
@@ -22,7 +23,8 @@ $header: #78c1ce;
 $app-background: #fafafa;
 $parent-background: #0fa8ad;
 $accent: #f58220;
-$button: #fcf9b6;
+$content: #f8c9a3;
+$button: #97dfb7;
 $footer: #005778;
 $footer-text: #fcf9b6;
 
