--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'buttons';
 
 :local(.allbeers) {
     box-sizing: border-box;
@@ -12,11 +13,11 @@
         color: $black;
     }
     table {
-        width: 90%;
+        width: 70%;
         margin: 0 auto;
         border-radius: 15px;
         border-collapse: collapse;
-        background-color: $grey;
+        background-color: $content;
         td, th {
             border-left: 1px solid $accent;
             border-top:1px solid $accent;
@@ -37,10 +38,10 @@
             width: 10%;
         }    
         th {
-                border-top: none;
+            border-top: none;
         }    
         td:first-child, th:first-child {
-                border-left: none;
+            border-left: none;
         }
     }
 }
