--- a/app/src/scss/partials/_buttons.scss
+++ b/app/src/scss/partials/_buttons.scss
@@ -1,7 +1,11 @@
 @mixin button() {
-    padding: 1%;
+    padding: 10px;
+    font-size: 1.6rem;
+    font-weight: bold;
     text-align: center;
     background-color: $button;
-    width: 75px;
+    width: 120px;
+    border: none;
+    outline: none;
     border-radius: 15px;
 }
