--- a/app/src/scss/partials/_footer.scss
+++ b/app/src/scss/partials/_footer.scss
@@ -1,4 +1,5 @@
 @mixin footer() {
+    box-sizing: border-box;
     padding: 12px 0;
     text-align: center;
     color: $footer-text;
@@ -6,7 +7,9 @@
     font-size: 1.6rem;
     position: fixed;
     width: 100%;
+    height: 42px;
     bottom: 0;
     left: 0;
+    overflow: hidden;
     z-index: 1000;
 }
