--- a/app/src/scss/partials/_header.scss
+++ b/app/src/scss/partials/_header.scss
@@ -2,14 +2,16 @@
     background-color: $header;
     position: fixed;
     width: 100%;
+    height: 78px;
     top: 0;
     left: 0;
+    overflow: hidden;
     z-index: 1000;
 
     div {
         width: 50%;
         float: left;
-        padding: 2% 0;
+        padding: 25px 0;
         h1 {
             padding-left: 4%;
             margin: 0;
@@ -23,7 +25,7 @@
         list-style: none;
         line-height: 2.8rem;
         font-size: 1.6rem;
-        padding: 2% 0;
+        padding: 25px 0;
         li {
             margin-right: 4%;
             display: inline-block;
