begin new mobile header

--- a/app/src/components/add-beers/add-beers.html
+++ b/app/src/components/add-beers/add-beers.html
@@ -1,4 +1,4 @@
-<section ng-class="$ctrl.styles.addbeers">
+<section ng-class="$ctrl.styles.add_beers">
     <h3>Use the Form Below to Add a Beer</h3>
     <div class="add-beer">
         <div>
