--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 @import 'buttons';
 
-:local(.allbeers) {
+:local(.all_beers) {
     box-sizing: border-box;
     color: $black;
     font-size: 1.6rem;
