--- a/app/src/components/all-beers/all-beers.html
+++ b/app/src/components/all-beers/all-beers.html
@@ -1,4 +1,4 @@
-<section ng-class="$ctrl.styles.allbeers">  
+<section ng-class="$ctrl.styles.all_beers">  
     <h3>Select a Beer to See Its Reviews</h3>
     <table>
         <thead>
