--- a/app/src/components/beers/beers.html
+++ b/app/src/components/beers/beers.html
@@ -1,14 +1,29 @@
 <section ng-class="$ctrl.styles.beers">
     <header>
-        <div>
-            <h1 ui-sref="about">The Beer Reviewed Journal</h1>
+        <div class="app-name">
+            <h1 ui-sref="about">BeerCrit</h1>
         </div>
         <nav>
-            <li ng-if="$ctrl.isAdmin()" ui-sref="admin">ADMIN PAGE</li>
-            <li ng-if="$ctrl.isAuthenticated()" ui-sref="profile">MY REVIEWS</li>
-            <li ng-if="$ctrl.isAuthenticated()" ui-sref="beers">BEERS</li>  
-            <li ng-if="$ctrl.isAuthenticated()" ui-sref="about" ng-click="$ctrl.logout()">LOGOUT</li>
-            <li ng-if="!$ctrl.isAuthenticated()" ui-sref="beers">SIGNIN</li>     
+            <div class="nav-link" ng-if="$ctrl.isAdmin()">
+                <i class="fa fa-cog"></i>
+                <li ui-sref="admin">ADMIN PAGE</li>
+            </div>
+            <div class="nav-link" ng-if="$ctrl.isAuthenticated()">
+                <i class="fa fa-thumbs-up"></i>
+                <li ui-sref="profile">MY REVIEWS</li>
+            </div>
+            <div class="nav-link" ng-if="$ctrl.isAuthenticated()">
+                <i class="fa fa-beer"></i> 
+                <li ui-sref="beers">BEERS</li>
+            </div>
+            <div class="nav-link" ng-if="$ctrl.isAuthenticated()">
+                <i class="fa fa-sign-out"></i>  
+                <li ui-sref="about" ng-click="$ctrl.logout()">LOGOUT</li>
+            </div>
+            <div class="nav-link" ng-if="!$ctrl.isAuthenticated()">
+                <i class="fa fa-sign-in"></i>
+                <li ng-if="!$ctrl.isAuthenticated()" ui-sref="beers">SIGNIN</li>
+            </div>                
         </nav>
     </header>
     <div class="content">
