--- a/app/src/components/beers/beers.scss
+++ b/app/src/components/beers/beers.scss
@@ -11,7 +11,37 @@
         font-size: 3.0rem; 
     }    
     header {
-        @include header();
+        background-color: $header;
+        position: fixed;
+        width: 100%;
+        height: 78px;
+        top: 0;
+        left: 0;
+        overflow: hidden;
+        z-index: 1000;
+    
+        .app-name {
+            padding: 10px 0 0;
+            h1 {
+                padding-left: 4%;
+                margin: 0;
+                font-size: 2.4rem;
+            }           
+        }
+        nav {           
+            list-style: none;
+            line-height: 2.8rem;
+            font-size: 1.6rem;
+            padding: 0;
+            .nav-link {
+                padding: 0;
+                text-align: center;
+                display: inline-block;
+                i {
+                    display: block;
+                }
+            }
+        }
     }
     .content {
         position: absolute;
