--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -11,6 +11,10 @@
         text-align: center;
         color: $black;
     }
+    .beer-listing{
+        text-align: center;
+        color: $white;
+    }
     table {
         width: 70%;
         margin: 0 auto;
