--- a/app/src/scss/partials/_buttons.scss
+++ b/app/src/scss/partials/_buttons.scss
@@ -1,11 +1,15 @@
 @mixin button() {
-    padding: 7px 0;
-    font-size: 1.4rem;
-    font-weight: bold;
+    padding: 7px 0 9px 0;
     text-align: center;
     background-color: $button;
-    width: 100px;
+    width: 110px;
     border: none;
     outline: none;
     border-radius: 5px 15px 15px 5px;
+    span {
+        font-size: 1.4rem;
+        font-weight: bold;
+        // vertical-align: text-top;
+        padding: 0 0 0 10px;
+    }
 }
